Look of renrot.conf amended.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@313 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -1,22 +1,33 @@
+#######################################################################
+##
+## This is configuration file for RenRot. 
+## See commented variables for defaults.
+##
+## NOTE: These variables can be overriden by command line options.
+##
+
+#######################################################################
 #
-## This is configuration file for RenRot. See commented variables for defaults.
+# GENERAL SECTION
 #
-# Note: These variables can be overriden by command line options.
+
+# Use IPC for execution external command
+#use IPC		= No
+
+# Use colorized output (not works under MS Windows)
+#use color		= No
 
 # Include color scheme
-#include		= '/etc/renrot/colors.conf'
+#include		= '~/etc/renrot/colors.conf'
 
-# Whether to keywordize the files (see option --keywordize description for details)
-#keywordize		= No
-
-# Whether to replace existing keywords with new ones, or add new to existent ones
-#keywords replace	= No
-
-# Default file name with keyword set
-#keywords file		= '.keywords'
+# Include tags information.
+#include		= '/etc/renrot/tags.conf'
 
 # Process files with or without mtime modification.
 #mtime			= Yes
+
+# Trimming rotated images when using jpegtran.
+#trim			= Yes
 
 # Template is used for file name building while renaming. Interpreted
 # sequences are:
@@ -28,7 +39,8 @@
 #	%F  FNumber tag value if defined
 #	%H  hour (00-23)
 #	%I  ISO tag value if defined
-#	%i  FileNumber tag if exists (otherwise, it'll be replaced by string "NA")
+#	%i  FileNumber tag if exists (otherwise, it'll 
+#	    be replaced by string "NA")
 #	%M  minute (00-59)
 #	%m  month (01-12)
 #	%n  previous file name
@@ -38,13 +50,30 @@
 #	%W  WhiteBalance tag value if defined
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
+#
 #name template		= '%Y%m%d%H%M%S'
 
-# Trimming rotated images when using jpegtran.
-#trim			= Yes
+#######################################################################
+#
+# KEYWORDS SECTION
+#
+# Whether to keywordize the files (see option --keywordize description 
+# in manual, for details)
+#keywordize		= No
 
-# Aggregation mode. Possible values are: none, delta or template.
+# Whether to replace existing keywords with new ones, or add new ones
+#keywords replace	= No
+
+# Default file name with keywords set
+#keywords file		= '.keywords'
+
+######################################################################
+#
+# AGGREGATION MODE SECTION
+#
+# Possible values are: none, delta or template.
 #aggregation mode	= 'none'
+#
 
 # Template used for file aggregation. Interpreted sequences are:
 #	%d  day of the month (01-31)
@@ -69,33 +98,34 @@
 # For now it is imposible to set anything except 'Images.Links.Directory'
 #aggregation virtual directory	= 'Images.Links.Directory'
 
-# Include tags information.
-#include		= '/etc/renrot/tags.conf'
 
-# Use IPC for execution external command
-#use IPC		= No
-
-# Use colorized output (not works under MS Windows)
-#use color		= Yes
-
+#######################################################################
 #
-## Contact Sheet Generator Section
-## -------------------------------
+# CONTACT SHEET GENERATOR SECTION
 #
 
 #contact sheet			= No
-#contact sheet dir		= 'CS.TMP' # temp directory
+#contact sheet dir		= 'CS.TMP'
 #contact sheet file		= 'cs'
 
-# look ImageMagick documentation for montage options:
+## look ImageMagick documentation for montage options:
 # montage --help
 # http://www.imagemagick.org/
 #
 #contact sheet tile		= '7x5'
 #contact sheet title		= 'Default Contact Sheet Title'
+#contact sheet label		= '%t'
+#contact sheet frame		= '3'
+#contact sheet pointsize	= '11'
+#contact sheet shadow		= Yes
+#contact sheet thm text		= 'thumbnail\n\nNA'
 
-# to list predefined color names use 'convert -list color'
-# do not put "#", it'll be concatenated automatically
+## Colors:
+# to list predefined color names use 
+# convert -list color
+#
+# NOTE: do not put "#", it'll be concatenated automatically
+#
 #contact sheet background 	= 'FFF'
 #contact sheet bordercolor	= 'DDD'
 #contact sheet mattecolor	= 'CCC'
@@ -105,18 +135,19 @@
 #contact sheet thm grad to	= '909090'
 
 
-
-# 1. to list the TrueType and Postscript Type 1 fonts use 'convert -list type'
-# 2. as well you can use the font names listed by 'xlsfonts'
-# 3. and you can specify the full pathname to the actual font file itself.
-# 4. to know info about the font you can use 'display fontname.ext'
+## Fonts:
+# 1. to list the TrueType and Postscript Type 1 fonts use 
+#    convert -list type
+# 2. as well you can use the font names listed by 
+#    xlsfonts
+# 3. and you can specify the full pathname to the actual 
+#    font file itself.
+# 4. to know info about the font you can use 
+#    display fontname.ext
 #
-#contact sheet font		= 'Helvetica' # present if ghostscript installed
-#contact sheet thm font		= 'Helvetica' # present if ghostscript installed
+# NOTE: font 'Helvetica' is ghostscript font, MS users 
+#       can try with Arial
+#
+#contact sheet font		= 'Helvetica'
+#contact sheet thm font		= 'Helvetica'
 
-#contact sheet label		= '%t'
-#contact sheet frame		= '3'
-#contact sheet pointsize	= '11'
-#contact sheet shadow		= Yes
-
-#contact sheet thm text		= 'thumbnail\n\nNA'
