colors.conf look amended.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@314 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/colors.conf
+++ b/etc/colors.conf
@@ -1,16 +1,19 @@
-#
-## This is configuration file for RenRot. See commented variables for defaults.
-#
-# Note: These variables can be overriden by command line options.
+#######################################################################
+##
+## This is configuration file for RenRot. 
+## See commented variables for defaults.
+##
+## Note: These variables can be overriden by command line options.
+##
 
-# Use colorized output. This NOT works under Win32.
-#Use color	= No
-
+#######################################################################
+#
 # Setup colors for different facilities
+#
 
-#Color = debug: 'green'
-#Color = error: 'magenta'
-#Color = fatal: 'red'
-#Color = info: 'bold'
-#Color = process: 'white'
-#Color = warning: 'cyan'
+#color = debug: 'green'
+#color = error: 'magenta'
+#color = fatal: 'red'
+#color = info: 'bold'
+#color = process: 'white'
+#color = warning: 'cyan'
