--contact-sheet-rank added. 'contact sheet rank' and 'contact sheet rank file' added to config file. some indentation amended.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@337 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -64,7 +64,7 @@
 # Whether to replace existing keywords with new ones, or add new ones
 #keywords replace	= No
 
-# Default file name with keywords set
+# Default name of the file with keywords set
 #keywords file		= '.keywords'
 
 ######################################################################
@@ -150,4 +150,9 @@
 #
 #contact sheet font		= 'Helvetica'
 #contact sheet thm font		= 'Helvetica'
+
+## Ranking:
+#
+#contact sheet rank		= No
+#contact sheet rank file	= '.rank'
 
