--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -21,7 +21,7 @@
 #include		= '~/etc/renrot/colors.conf'
 
 # Include tags information.
-#include		= '/etc/renrot/tags.conf'
+#include		= '~/etc/renrot/tags.conf'
 
 # Process files with or without mtime modification.
 #mtime			= Yes
@@ -72,8 +72,8 @@
 # AGGREGATION MODE SECTION
 #
 # Possible values are: none, delta or template.
-#aggregation mode	= 'none'
-#
+#aggregation mode		= 'none'
+
 
 # Template used for file aggregation. Interpreted sequences are:
 #	%d  day of the month (01-31)
@@ -83,16 +83,16 @@
 #	%S  second (00-59)
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
-#aggregation template	= '%Y%m%d'
+#aggregation template		= '%Y%m%d'
 
 # Delta interval in seconds for simple aggregation.
-#aggregation delta	= 900
+#aggregation delta		= 900
 
 # Counterless aggregation directory name.
-#aggregation directory	= 'Images'
+#aggregation directory		= 'Images'
 
 # To run virtualized aggregation (see documentation).
-#aggregation virtual	= No
+#aggregation virtual		= No
 
 # Default virtual aggregation directory.
 # For now it is imposible to set anything except 'Images.Links.Directory'
