etc/tags.conf edited.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@339 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -18,10 +18,10 @@
 #use color		= No
 
 # Include color scheme
-#include		= '~/etc/renrot/colors.conf'
+#include		= '~/.renrot/colors.conf'
 
 # Include tags information.
-#include		= '~/etc/renrot/tags.conf'
+#include		= '~/.renrot/tags.conf'
 
 # Process files with or without mtime modification.
 #mtime			= Yes
