--- a/etc/tags.conf
+++ b/etc/tags.conf
@@ -1,20 +1,25 @@
-#
+#######################################################################
+##
 ## This is configuration file for RenRot. See commented variables for defaults.
-#
-# Note: These variables can be overriden by command line options.
+##
+## Note: These variables can be overriden by command line options.
+##
 
 # The commentary filename to put to Comment tag. Default is undefined.
-#TagFile = Comment: /etc/renrot/comment.tag
+#TagFile = Comment: ~/renrot/comment.tag
 
 # The file containing the copyright, if you prefer the copyright as
 # string, than define it as Tag
-#TagFile = Copyright [EXIF]: /etc/renrot/copyright.tag
+#TagFile = Copyright [EXIF]: ~/.renrot/copyright.tag
 
 # The commentary to put to UserComment tag. Default is undefined.
 # (This option could be overriden by --user-comment parameter)
 #Tag = UserComment: 'User commentary here'
 
+#######################################################################
+#
 # Personal information could be set to XMP tags. Default is undefined.
+#
 #Tag = CreatorContactInfoCiAdrCity [XMP]: 'Here Is Your City'
 #Tag = CreatorContactInfoCiAdrCtry [XMP]: 'Here Is Your Country'
 #Tag = CreatorContactInfoCiAdrExtadr [XMP]: 'Here Is Your Apartments'
@@ -27,9 +32,13 @@
 #Tag = Artist [EXIF]: 'Here Is Artist'
 #Tag = ImageDescription [EXIF]: 'Here Is Image description'
 
+#######################################################################
+#
 # GPS Tags.
-# (For more info, consult http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/GPS.html)
-# Following sample is given for Donetsk, Ukraine (the home city of the authors):
+# (For more info, consult 
+# http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/GPS.html)
+# Following sample is given for Donetsk, UA (the home city of the authors):
+#
 #Tag = GPSLatitudeRef [GPS]: 'N'	# N for Noth and S for South
 #Tag = GPSLatitude [GPS]: '48 00 00'	# in form "%d %.2f %.2f"
 #Tag = GPSLongitudeRef [GPS]: 'E'	# E for East and W for West
@@ -39,7 +48,12 @@
 #Tag = GPSDateStamp [GPS]: ''		# in form "YYYY:MM:DD"
 #Tag = GPSDateStamp [GPS]: ''		# in form "HH MM SS"
 
+#######################################################################
+#
+# TAGs:
+#
 # You can add any known tag here in the following format:
 #Tag = KnownTagName [TagGroup]: 'Value of the tag'
+#
 # Or from a file:
 #TagFile = KnownTagName [TagGroup]: /etc/renrot/knowntagname.tag
