renrot.conf amended
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@343 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -106,7 +106,9 @@
 
 #contact sheet			= No
 #contact sheet dir		= 'CS.TMP'
-#contact sheet file		= 'cs'
+
+# Template can be used for file name generation
+#contact sheet file		= 'CS-%c'
 
 ## look ImageMagick documentation for montage options:
 # montage --help
