renrot.conf edited
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@359 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -1,6 +1,6 @@
 #######################################################################
 ##
-## This is configuration file for RenRot. 
+## This is configuration file for RenRot.
 ## See commented variables for defaults.
 ##
 ## NOTE: These variables can be overriden by command line options.
@@ -39,7 +39,7 @@
 #	%F  FNumber tag value if defined
 #	%H  hour (00-23)
 #	%I  ISO tag value if defined
-#	%i  FileNumber tag if exists (otherwise, it'll 
+#	%i  FileNumber tag if exists (otherwise, it'll
 #	    be replaced by string "NA")
 #	%M  minute (00-59)
 #	%m  month (01-12)
@@ -57,7 +57,7 @@
 #
 # KEYWORDS SECTION
 #
-# Whether to keywordize the files (see option --keywordize description 
+# Whether to keywordize the files (see option --keywordize description
 # in manual, for details)
 #keywordize		= No
 
@@ -108,7 +108,7 @@
 #contact sheet dir		= 'CS.TMP'
 
 # Template can be used for file name generation
-#contact sheet file		= 'CS-%c'
+#contact sheet file		= 'CS-%c.jpg'
 
 ## look ImageMagick documentation for montage options:
 # montage --help
@@ -123,7 +123,7 @@
 #contact sheet thm text		= 'thumbnail\n\nNA'
 
 ## Colors:
-# to list predefined color names use 
+# to list predefined color names use
 # convert -list color
 #
 # NOTE: do not put "#", it'll be concatenated automatically
@@ -138,16 +138,16 @@
 
 
 ## Fonts:
-# 1. to list the TrueType and Postscript Type 1 fonts use 
+# 1. to list the TrueType and Postscript Type 1 fonts use
 #    convert -list type
-# 2. as well you can use the font names listed by 
+# 2. as well you can use the font names listed by
 #    xlsfonts
-# 3. and you can specify the full pathname to the actual 
+# 3. and you can specify the full pathname to the actual
 #    font file itself.
-# 4. to know info about the font you can use 
+# 4. to know info about the font you can use
 #    display fontname.ext
 #
-# NOTE: font 'Helvetica' is ghostscript font, MS users 
+# NOTE: font 'Helvetica' is ghostscript font, MS users
 #       can try with Arial
 #
 #contact sheet font		= 'Helvetica'
