Switch to tab space = 2 indening scheme.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@496 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -67,7 +67,7 @@
 # Default name of the file with keywords set
 #keywords file		= '.keywords'
 
-######################################################################
+#######################################################################
 #
 # AGGREGATION MODE SECTION
 #
@@ -105,10 +105,10 @@
 #
 
 #contact sheet			= No
-#contact sheet dir		= 'CS.TMP'
+#contact sheet dir		= 'Contact.Sheet'
 
 # Template can be used for file name generation
-#contact sheet file		= 'CS-%c.jpg'
+#contact sheet file		= 'cs-%c.jpg'
 
 ## look ImageMagick documentation for montage options:
 # montage --help
