--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -158,3 +158,7 @@
 #contact sheet rank		= No
 #contact sheet rank file	= 'rankfile'
 
+## The generated thumbnail geometry
+#generate thumbnail size	=> '160x120'
+
+
