thmbgen() and thmb_add() changed to use 'generate thumbnail size' configuration file option
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@530 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -159,6 +159,5 @@
 #contact sheet rank file	= 'rankfile'
 
 ## The generated thumbnail geometry
-#generate thumbnail size	=> '160x120'
-
+#generate thumbnail size	= '160x120'
 
