Append sample files.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@544 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -156,7 +156,7 @@
 ## Ranking:
 #
 #contact sheet rank		= No
-#contact sheet rank file	= 'rankfile'
+#contact sheet rank file	= '.rank'
 
 ## The generated thumbnail geometry
 #generate thumbnail size	= '160x120'
