The option --keywordize was renamed to --keywords
Signed-off-by: Andy Shevchenko <andy.shevchenko@gmail.com>

git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@592 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -57,9 +57,9 @@
 #
 # KEYWORDS SECTION
 #
-# Whether to keywordize the files (see option --keywordize description
+# Whether to fill Keywords tag to the files (see option --keywords description
 # in manual, for details)
-#keywordize		= No
+#keywords		= No
 
 # Whether to replace existing keywords with new ones, or add new ones
 #keywords replace	= No
