tagwriter: define it as a separate framework
Signed-off-by: Andy Shevchenko <andy.shevchenko@gmail.com>

--- a/etc/tags.conf
+++ b/etc/tags.conf
@@ -58,3 +58,12 @@
 # Or from a file:
 #TagFile = KnownTagName [TagGroup]: /etc/renrot/knowntagname.tag
 
+#######################################################################
+#
+# TAG WRITER SECTION
+#
+
+# Whether or not to create thumbnail image tag
+#tagwriter thumb		= No
+# The generated thumbnail geometry
+#tagwriter thumb size		= '160x120'
